--- a/app/src/main/res/layout/activity_call.xml
+++ b/app/src/main/res/layout/activity_call.xml
@@ -6,6 +6,66 @@
     android:layout_height="match_parent"
     tools:context=".CallActivity">
 
+    <RelativeLayout
+        android:id="@+id/remote_video_view_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/darker_gray">
 
+    </RelativeLayout>
+
+    <FrameLayout
+        android:id="@+id/local_video_view_container"
+        android:layout_width="90dp"
+        android:layout_height="120dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@android:color/background_light">
+
+    </FrameLayout>
+
+    <RelativeLayout
+        android:id="@+id/control_panel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp">
+
+        <ImageView
+            android:id="@+id/btn_call"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_centerInParent="true"
+            android:onClick="onCallClicked"
+            android:src="@drawable/ic_baseline_call_end_24"
+            android:scaleType="centerCrop"/>
+
+        <ImageView
+            android:id="@+id/btn_switch_camera"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_toRightOf="@id/btn_call"
+            android:layout_toEndOf="@id/btn_call"
+            android:layout_marginLeft="40dp"
+            android:layout_centerVertical="true"
+            android:onClick="onSwitchCameraClicked"
+            android:src="@drawable/ic_baseline_switch_camera_24"
+            android:scaleType="centerCrop"/>
+
+        <ImageView
+            android:id="@+id/btn_mute"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_toLeftOf="@id/btn_call"
+            android:layout_toStartOf="@id/btn_call"
+            android:layout_marginRight="40dp"
+            android:layout_centerVertical="true"
+            android:onClick="onLocalAudioMuteClicked"
+            android:src="@drawable/ic_baseline_mic_off_24"
+            android:scaleType="centerCrop"/>
+    </RelativeLayout>
 
 </RelativeLayout>
