--- a/app/src/main/res/layout/activity_users.xml
+++ b/app/src/main/res/layout/activity_users.xml
@@ -6,19 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".UsersActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Tap on the user to make a call"
-        android:layout_centerHorizontal="true"
-        android:layout_marginVertical="8dp"/>
-
     <ListView
         android:id="@+id/usersListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/textView"
+        android:layout_marginTop="10dp"
         android:layout_above="@+id/signOutButton"/>
 
     <Button
