--- a/app/src/main/res/layout/activity_call.xml
+++ b/app/src/main/res/layout/activity_call.xml
@@ -10,7 +10,8 @@
         android:id="@+id/remote_video_view_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/darker_gray">
+        android:background="@android:color/darker_gray"
+        android:onClick="onLocalContainerClicked">
 
     </RelativeLayout>
 
@@ -35,11 +36,11 @@
         android:layout_marginBottom="10dp">
 
         <ImageView
-            android:id="@+id/btn_call"
+            android:id="@+id/btn_end_call"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_centerInParent="true"
-            android:onClick="onCallClicked"
+            android:onClick="onEndCallClicked"
             android:src="@drawable/ic_baseline_call_end_24"
             android:scaleType="centerCrop"/>
 
@@ -47,9 +48,8 @@
             android:id="@+id/btn_switch_camera"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_toRightOf="@id/btn_call"
-            android:layout_toEndOf="@id/btn_call"
-            android:layout_marginLeft="40dp"
+            android:layout_toEndOf="@id/btn_end_call"
+            android:layout_marginStart="40dp"
             android:layout_centerVertical="true"
             android:onClick="onSwitchCameraClicked"
             android:src="@drawable/ic_baseline_switch_camera_24"
@@ -59,9 +59,8 @@
             android:id="@+id/btn_mute"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_toLeftOf="@id/btn_call"
-            android:layout_toStartOf="@id/btn_call"
-            android:layout_marginRight="40dp"
+            android:layout_toStartOf="@id/btn_end_call"
+            android:layout_marginEnd="40dp"
             android:layout_centerVertical="true"
             android:onClick="onLocalAudioMuteClicked"
             android:src="@drawable/ic_baseline_mic_off_24"
